Colaboratory を使用して作成しました

--- a/learncpp.ipynb
+++ b/learncpp.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMTcoGJNK+Sv4O+Tx04HA4Z",
+      "authorship_tag": "ABX9TyNWR7B7LfaCw9GCInBUgMcQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2950,7 +2950,7 @@
         "  return 0;\n",
         "}"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2973,7 +2973,7 @@
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3014,7 +3014,7 @@
         "  return 0;\n",
         "}\n"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3037,7 +3037,7 @@
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3060,7 +3060,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "qf_0WEWnl4yx",
-        "outputId": "bfd0f850-7e0e-4540-d4c1-14c083b03bcc",
+        "outputId": "1bb8ab57-b9ce-4d00-c7c1-6edb9fa9bc24",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -3068,17 +3068,18 @@
       "source": [
         "# 配列\n",
         "# 次のは C の配列で、今はあまり使われないのではないか\n",
-        "# vector を使う。array もある。list もある。\n",
+        "# array もある。list もある。が、基本的に vector に書き換えよう\n",
         "%%writefile temp.cpp\n",
         "# include <bits/stdc++.h>\n",
         "using namespace std;\n",
-        "\n",
         "int main() {\n",
-        "  string cars[4] = {\"Volvo\", \"BMW\", \"Ford\", \"Mazda\"};\n",
-        "  cout << cars[0];\n",
+        "  // string cars[4] = {\"Volvo\", \"BMW\", \"Ford\", \"Mazda\"};\n",
+        "  // cout << cars[0];\n",
+        "  vector<string> cars = {\"Volvo\", \"BMW\", \"Ford\", \"Mazda\"};\n",
+        "  cout << cars.at(0) << endl;\n",
         "}"
       ],
-      "execution_count": 32,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "stream",
@@ -3093,7 +3094,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "e3onRGAemAhi",
-        "outputId": "e52a4c58-2130-46bb-d5cb-0a2c6a7f3f5d",
+        "outputId": "2468a73b-60c6-4e40-a691-033422ef744f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -3101,13 +3102,13 @@
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": 33,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Volvo"
+            "Volvo\n"
           ]
         }
       ]
@@ -3116,7 +3117,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "JickdBaumMKJ",
-        "outputId": "8e322d83-f021-4b8a-d3af-6c1c4dc967c7",
+        "outputId": "8a6053c5-f6d2-4a40-a3f5-fe2a31500445",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -3128,12 +3129,15 @@
         "using namespace std;\n",
         "\n",
         "int main() {\n",
-        "  string cars[4] = {\"Volvo\", \"BMW\", \"Ford\", \"Mazda\"};\n",
-        "  cars[0] = \"Opel\";\n",
-        "  cout << cars[0];\n",
+        "    /* string cars[4] = {\"Volvo\", \"BMW\", \"Ford\", \"Mazda\"};\n",
+        "    cars[0] = \"Opel\";\n",
+        "    cout << cars[0]; */\n",
+        "    vector<string> cars = {\"Volvo\", \"BMW\", \"Ford\", \"Mazda\"};\n",
+        "    cars.at(0) = \"Opel\";\n",
+        "    cout << cars.at(0) << endl;\n",
         "}\n"
       ],
-      "execution_count": 34,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "stream",
@@ -3148,7 +3152,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "xME08Ssamati",
-        "outputId": "9527ac0e-4d66-4803-dc14-ea509937cee0",
+        "outputId": "6ae58369-38f6-4bb5-9d20-dcc165d11d0a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -3156,13 +3160,70 @@
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": 35,
+      "execution_count": 45,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Opel"
+            "Opel\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-8spDgtFmnW7",
+        "outputId": "f55d8257-8c55-45d8-9179-09877c11ab23",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "%%writefile temp.cpp\n",
+        "# include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        "int main(){\n",
+        "    vector<string> cars = {\"Volvo\", \"BMW\", \"Ford\", \"Mazda\"};\n",
+        "    for(int i = 0; i < 4; i++) {\n",
+        "        cout << cars.at(i) << endl;\n",
+        "    }\n",
+        "}"
+      ],
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jy8wA-48mq-n",
+        "outputId": "e58bb73e-03fa-4101-9fdc-f49ab2c90b90",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!g++ temp.cpp; ./a.out"
+      ],
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Volvo\n",
+            "BMW\n",
+            "Ford\n",
+            "Mazda\n"
           ]
         }
       ]
@@ -3179,88 +3240,17 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "-8spDgtFmnW7"
-      },
-      "source": [
-        "%%writefile temp.cpp\n",
-        "# include <bits/stdc++.h>\n",
-        "using namespace std;\n",
-        "\n",
-        "int main() {\n",
-        "  string cars[4] = {\"Volvo\", \"BMW\", \"Ford\", \"Mazda\"};\n",
-        "  for(int i = 0; i < 4; i++) {\n",
-        "    cout << cars[i] << endl;\n",
-        "  }\n",
-        "  return 0;\n",
-        "}"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "jy8wA-48mq-n"
-      },
-      "source": [
-        "!g++ temp.cpp; ./a.out"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "nJ5zPLrsm1z1"
       },
       "source": [
         "%%writefile temp.cpp\n",
-        "\n",
         "# include <bits/stdc++.h>\n",
-        "#include <string>\n",
         "using namespace std;\n",
         "int main() {\n",
-        "  string cars[4] = {\"Volvo\", \"BMW\", \"Ford\", \"Mazda\"};\n",
+        "  vector<string> cars = {\"Volvo\", \"BMW\", \"Ford\", \"Mazda\"};\n",
         "  for(int i = 0; i < 4; i++) {\n",
-        "    cout << i << \": \" << cars[i] << endl;\n",
+        "    cout << i << \": \" << cars.at(i) << endl;\n",
         "  }\n",
-        "  return 0;\n",
-        "}\n"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "BVbo7l6km5T1"
-      },
-      "source": [
-        "!g++ temp.cpp; ./a.out"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "Sy8xPThGnpbg"
-      },
-      "source": [
-        "%%writefile temp.cpp\n",
-        "\n",
-        "# include <bits/stdc++.h>\n",
-        "#include <string>\n",
-        "using namespace std;\n",
-        "\n",
-        "int main() {\n",
-        "  string cars[5] = {\"Volvo\", \"BMW\", \"Ford\"};\n",
-        "  cars[3] = \"Mazda\";\n",
-        "  cars[4] = \"Tesla\";\n",
-        "  for(int i = 0; i < 5; i++) {\n",
-        "    cout << cars[i] << endl;\n",
-        "  }\n",
-        "  return 0;\n",
         "}"
       ],
       "execution_count": null,
@@ -3269,13 +3259,89 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "GIVj0MYAnswK"
+        "id": "BVbo7l6km5T1",
+        "outputId": "4b039752-f826-4b42-c828-5aea0c565ead",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0: Volvo\n",
+            "1: BMW\n",
+            "2: Ford\n",
+            "3: Mazda\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Sy8xPThGnpbg",
+        "outputId": "4ce5b615-4a3b-42fb-b5a1-221dc745e658",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# vector に付け足す\n",
+        "%%writefile temp.cpp\n",
+        "# include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        "int main() {\n",
+        "  vector<string> cars = {\"Volvo\", \"BMW\", \"Ford\"};\n",
+        "  cars.push_back(\"Mazda\");\n",
+        "  cars.push_back(\"Tesla\") ;\n",
+        "  for(auto item: cars) {\n",
+        "    cout << item << endl;\n",
+        "  }\n",
+        "}"
+      ],
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GIVj0MYAnswK",
+        "outputId": "40093ab6-9c0e-4008-e783-3027174419f2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!g++ temp.cpp; ./a.out"
+      ],
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Volvo\n",
+            "BMW\n",
+            "Ford\n",
+            "Mazda\n",
+            "Tesla\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -3284,7 +3350,6 @@
       },
       "source": [
         "%%writefile temp.cpp\n",
-        "\n",
         "# include <bits/stdc++.h>\n",
         "#include <string>\n",
         "using namespace std;\n",
