Colaboratory を使用して作成しました

--- a/learncpp.ipynb
+++ b/learncpp.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNWR7B7LfaCw9GCInBUgMcQ",
+      "authorship_tag": "ABX9TyPGTZvPS9NHLDEko5JkeF4B",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3079,7 +3079,7 @@
         "  cout << cars.at(0) << endl;\n",
         "}"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3102,7 +3102,7 @@
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3137,7 +3137,7 @@
         "    cout << cars.at(0) << endl;\n",
         "}\n"
       ],
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3160,7 +3160,7 @@
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3191,7 +3191,7 @@
         "    }\n",
         "}"
       ],
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3214,7 +3214,7 @@
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3227,15 +3227,6 @@
           ]
         }
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# いまここ"
-      ],
-      "metadata": {
-        "id": "2mUjtFMSpJp9"
-      }
     },
     {
       "cell_type": "code",
@@ -3268,7 +3259,7 @@
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3305,7 +3296,7 @@
         "  }\n",
         "}"
       ],
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3328,7 +3319,7 @@
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3346,169 +3337,263 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "OSU6Fsxqn5Rs"
+        "id": "OSU6Fsxqn5Rs",
+        "outputId": "e1dfd1c0-cede-4ad0-e495-9f0113260443",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "%%writefile temp.cpp\n",
         "# include <bits/stdc++.h>\n",
-        "#include <string>\n",
         "using namespace std;\n",
-        "\n",
         "int main() {\n",
-        "  string cars[5];\n",
-        "  cars[0] = \"Volvo\";\n",
-        "  cars[1] = \"BMW\";\n",
-        "  cars[2] = \"Ford\";\n",
-        "  cars[3] = \"Mazda\";\n",
-        "  cars[4] = \"Tesla\";\n",
+        "  vector<string> cars;\n",
+        "  cars.push_back(\"Volvo\");\n",
+        "  cars.push_back(\"BMW\");\n",
+        "  cars.push_back(\"Ford\");\n",
+        "  cars.push_back(\"Mazda\");\n",
+        "  cars.push_back(\"Tesla\");\n",
+        "  cars.at(0) = \"Toyota\";\n",
         "  for(int i = 0; i < 5; i++) {\n",
-        "    cout << cars[i] << endl;\n",
+        "    cout << cars.at(i) << endl;\n",
         "  }\n",
-        "  return 0;\n",
         "}\n"
       ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "T7JATf7Kn9d2"
-      },
-      "source": [
-        "!g++ temp.cpp; ./a.out"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "-qrghEFlhYhu"
-      },
-      "source": [
-        "%%writefile temp.cpp\n",
-        "\n",
-        "# include <bits/stdc++.h>\n",
-        "#include <string>\n",
-        "using namespace std;\n",
-        "\n",
-        "int main() {\n",
-        "  string food = \"Pizza\";\n",
-        "  string &meal = food;\n",
-        "\n",
-        "  cout << food << endl;\n",
-        "  cout << meal << endl;\n",
-        "  return 0;\n",
-        "}\n"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "KvsgcVGDhmRx"
-      },
-      "source": [
-        "!g++ temp.cpp; ./a.out"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "E_KPSSOwigv7"
-      },
-      "source": [
-        "%%writefile temp.cpp\n",
-        "\n",
-        "# include <bits/stdc++.h>\n",
-        "#include <string>\n",
-        "using namespace std;\n",
-        "\n",
-        "int main() {\n",
-        "  string food = \"Pizza\";\n",
-        "\n",
-        "  cout << &food;\n",
-        "  return 0;\n",
-        "}\n"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "2Ifs1iLiimEp"
-      },
-      "source": [
-        "!g++ temp.cpp; ./a.out"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "n5tqPh7fYu4w"
-      },
-      "source": [
-        "# ポインター\n",
-        "\n",
-        "ポインター変数 ptr は `*` を付けて宣言する。\n",
-        "\n",
-        "ポインター変数 ptr はアドレス `&` が入る。\n",
-        "\n",
-        "すると、`*ptr` が書き換わる。え?"
+      "execution_count": 63,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "1hgN8V-YXrHK"
+        "id": "T7JATf7Kn9d2",
+        "outputId": "36baa618-6092-4c80-b3ea-315def42ae0b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
+        "!g++ temp.cpp; ./a.out"
+      ],
+      "execution_count": 64,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Toyota\n",
+            "BMW\n",
+            "Ford\n",
+            "Mazda\n",
+            "Tesla\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-qrghEFlhYhu",
+        "outputId": "77e76b6d-ba35-4cca-9cba-da918c08fad4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# 参照\n",
         "%%writefile temp.cpp\n",
-        "\n",
+        "# include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        "int main() {\n",
+        "  string food = \"Pizza\";\n",
+        "  string &meal = food;\n",
+        "  cout << food << endl;\n",
+        "  cout << meal << endl;\n",
+        "}\n"
+      ],
+      "execution_count": 67,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KvsgcVGDhmRx",
+        "outputId": "81151877-72be-45ab-cc85-79ccd16ba250",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!g++ temp.cpp; ./a.out"
+      ],
+      "execution_count": 66,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Pizza\n",
+            "Pizza\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# いまここ"
+      ],
+      "metadata": {
+        "id": "2mUjtFMSpJp9"
+      }
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "E_KPSSOwigv7",
+        "outputId": "b64ac754-0ad3-47a1-f6c2-8105b617362f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# 変数のメモリーアドレス\n",
+        "%%writefile temp.cpp\n",
         "# include <bits/stdc++.h>\n",
         "#include <string>\n",
+        "using namespace std;\n",
+        "\n",
+        "int main() {\n",
+        "  string food = \"Pizza\";\n",
+        "  cout << &food << endl; // 変数 food のメモリーアドレス\n",
+        "}"
+      ],
+      "execution_count": 76,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2Ifs1iLiimEp",
+        "outputId": "77fdca8e-eec7-4de4-ea61-a8ef939692d5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!g++ temp.cpp; ./a.out"
+      ],
+      "execution_count": 75,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0x7ffd5bc96880\n",
+            "Pizza\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1hgN8V-YXrHK",
+        "outputId": "e6cab92b-56ae-418c-d36a-da37b122d326",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# ポインター\n",
+        "# ポインター変数 ptr は `*` を付けて宣言する。\n",
+        "# ポインター変数 ptr はアドレス `&` が入る。\n",
+        "# すると、`*ptr` が書き換わる。え?\n",
+        "%%writefile temp.cpp\n",
+        "# include <bits/stdc++.h>\n",
         "using namespace std;\n",
         "\n",
         "int main() {\n",
         "  string food = \"Pizza\";  // A string variable\n",
         "  string* ptr = &food;  // A pointer variable that stores the address of food\n",
         "\n",
-        "  // Output the value of food\n",
         "  cout << food << endl;\n",
         "\n",
-        "  // Output the memory address of food\n",
+        "  // 変数 food のメモリーアドレス\n",
         "  cout << &food << endl;\n",
         "\n",
         "  // Output the memory address of food with the pointer\n",
         "  cout << ptr << endl;\n",
-        "  return 0;\n",
         "}"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 77,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "a8VNvKHCX1jW"
+        "id": "a8VNvKHCX1jW",
+        "outputId": "9ed167f1-13d2-4d41-b992-14e664f62a1a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 78,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Pizza\n",
+            "0x7ffd61821b20\n",
+            "0x7ffd61821b20\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "9g5Wa3RqYMTX"
+        "id": "9g5Wa3RqYMTX",
+        "outputId": "c8eb6105-e954-4739-faaa-6d77e1403e9e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "%%writefile temp.cpp\n",
@@ -3526,22 +3611,42 @@
         "\n",
         "  // Dereference: Output the value of food with the pointer\n",
         "  cout << *ptr << endl;\n",
-        "  return 0;\n",
         "}\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 79,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "qQC7biZtYPIn"
+        "id": "qQC7biZtYPIn",
+        "outputId": "30179023-64e8-4488-ed08-bf5645a5f1e5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 80,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0x7fff2812ac20\n",
+            "Pizza\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -3550,9 +3655,8 @@
       },
       "source": [
         "%%writefile temp.cpp\n",
-        "\n",
         "# include <bits/stdc++.h>\n",
-        "#include <string>\n",
+        "\n",
         "using namespace std;\n",
         "\n",
         "int main() {\n",
@@ -3576,7 +3680,6 @@
         "  \n",
         "  // Output the new value of the food variable\n",
         "  cout << food << endl;\n",
-        "  return 0;\n",
         "}\n"
       ],
       "execution_count": null,
