--- a/temp.ipynb
+++ b/temp.ipynb
@@ -6,7 +6,7 @@
       "name": "temp.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOmgq1GYL6PY2XbgUw5JCy5",
+      "authorship_tag": "ABX9TyPGGFAJ70pW5kp+6kbwSqFs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -24,6 +24,250 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/kalz2q/mycolabnotebooks/blob/master/temp.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# メモ\n",
+        "\n",
+        "実験場、メモ置き場、です"
+      ],
+      "metadata": {
+        "id": "KBSwAUuU4s_Y"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# C++: UTF-8 の文字列を1文字ずつ表示する (std::string)\n",
+        "# https://blog.sarabande.jp/post/64271702938"
+      ],
+      "metadata": {
+        "id": "LvCmU9We7Uiz"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "zRQYsTbz70S0"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%writefile temp.cpp\n",
+        "# include <bits/stdc++.h>\n",
+        "#include <iostream>\n",
+        "#include <string>\n",
+        "\n",
+        "void print_each_char(std::string);\n",
+        "\n",
+        "int main(void)\n",
+        "{\n",
+        "    using namespace std;\n",
+        "    string str = \"wats𠮷野家\";\n",
+        "    print_each_char(str);\n",
+        "\n",
+        "    return 0;\n",
+        "}\n",
+        "\n",
+        "void print_each_char(std::string str)\n",
+        "{\n",
+        "    using namespace std;\n",
+        "\n",
+        "    int pos;\n",
+        "    unsigned char lead; \n",
+        "    int char_size;\n",
+        "\n",
+        "   for (pos = 0; pos < str.size(); pos += char_size) {\n",
+        "   \n",
+        "        lead = str[pos];\n",
+        "\n",
+        "        if (lead < 0x80) {\n",
+        "            char_size = 1;\n",
+        "        } else if (lead < 0xE0) {\n",
+        "            char_size = 2;\n",
+        "        } else if (lead < 0xF0) {\n",
+        "            char_size = 3;\n",
+        "        } else {\n",
+        "            char_size = 4;\n",
+        "        }\n",
+        "\n",
+        "        cout << str.substr(pos, char_size) << '\\n';\n",
+        "    }\n",
+        "\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "rekuY80v4vk8",
+        "outputId": "98d21086-4eec-4eb1-bf00-1d3ebc8e2a28",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp; ./a.out"
+      ],
+      "metadata": {
+        "id": "SMn5Xg3247sM",
+        "outputId": "0f6ab1c7-f986-493f-f924-63dc3d566d93",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "w\n",
+            "a\n",
+            "t\n",
+            "s\n",
+            "𠮷\n",
+            "野\n",
+            "家\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# iterator version\n",
+        "#include <iostream>\n",
+        "#include <string>\n",
+        "\n",
+        "void print_each_char(std::string);\n",
+        "\n",
+        "int main(void)\n",
+        "{\n",
+        "    using namespace std;\n",
+        "    string str = u8\"𠮷野家のコピペ\";\n",
+        "    print_each_char(str);\n",
+        "\n",
+        "    return 0;\n",
+        "}\n",
+        "\n",
+        "void print_each_char(std::string str)\n",
+        "{\n",
+        "    using namespace std;\n",
+        "\n",
+        "    unsigned char lead; \n",
+        "    int char_size = 0;\n",
+        "\n",
+        "    for (string::iterator it = str.begin(); it != str.end(); it += char_size) {\n",
+        "\n",
+        "        lead = *it;\n",
+        "\n",
+        "        if (lead < 0x80) {\n",
+        "            char_size = 1;\n",
+        "        } else if (lead < 0xE0) {\n",
+        "            char_size = 2;\n",
+        "        } else if (lead < 0xF0) {\n",
+        "            char_size = 3;\n",
+        "        } else {\n",
+        "            char_size = 4;\n",
+        "        }\n",
+        "\n",
+        "        cout << str.substr(distance(str.begin(), it), char_size) << '\\n';\n",
+        "\n",
+        "    }\n",
+        "\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "Yq4OQl1__bVB"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# tuple version\n",
+        "#include <iostream>\n",
+        "#include <string>\n",
+        "\n",
+        "std::tuple<std::string, int> utf8_next_char(std::string str, int str_size, int pos);\n",
+        "\n",
+        "int main(void)\n",
+        "{\n",
+        "    using namespace std;\n",
+        "\n",
+        "    string str = u8\"あいうえお\";\n",
+        "    tuple<string, int> t;\n",
+        "    int str_size = str.size();\n",
+        "\n",
+        "    int pos = 0;\n",
+        "    string buf;\n",
+        "    int buf_size = 0;\n",
+        "\n",
+        "    for (int pos = 0; pos < str_size; pos += buf_size) {\n",
+        "        t = utf8_next_char(str, str_size, pos);\n",
+        "        buf = get<0>(t);\n",
+        "        buf_size = get<1>(t);\n",
+        "        cout << buf << '\\n';\n",
+        "    }\n",
+        "\n",
+        "    return 0;\n",
+        "}\n",
+        "\n",
+        "std::tuple<std::string, int> utf8_next_char(std::string str, int str_size, int pos)\n",
+        "{\n",
+        "    using namespace std;\n",
+        "    unsigned char c;\n",
+        "\n",
+        "    string buf;\n",
+        "    int buf_size;\n",
+        "\n",
+        "    if (pos >= str_size) {\n",
+        "        return make_tuple(u8\"?\", pos);\n",
+        "    }\n",
+        "\n",
+        "    c = str[pos];\n",
+        "\n",
+        "    if (c < 0x80) {\n",
+        "        buf_size = 1;\n",
+        "    } else if (c < 0xE0) {\n",
+        "        buf_size = 2;\n",
+        "    } else if (c < 0xF0){\n",
+        "        buf_size = 3;\n",
+        "    } else {\n",
+        "        buf_size = 4;\n",
+        "    }\n",
+        "\n",
+        "    buf = str.substr(pos, buf_size);\n",
+        "\n",
+        "    return  make_tuple(buf, buf_size);\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "yqf_tRCO_d7C"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -77,7 +321,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -141,7 +385,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -207,7 +451,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -230,7 +474,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
