Colaboratory を使用して作成しました

--- a/temp.ipynb
+++ b/temp.ipynb
@@ -6,7 +6,7 @@
       "name": "temp.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPu/IoFSEZ9WNCDyTlbpLqE",
+      "authorship_tag": "ABX9TyMEKXmUSK3prxOdDtLkTl10",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -67,11 +67,11 @@
         "}"
       ],
       "metadata": {
-        "id": "ugzILmnPAnHH",
-        "outputId": "6af375da-9de5-4693-afdf-d4b26dc59df6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ugzILmnPAnHH",
+        "outputId": "6af375da-9de5-4693-afdf-d4b26dc59df6"
       },
       "execution_count": 40,
       "outputs": [
@@ -90,11 +90,11 @@
         "!g++ temp.cpp; ./a.out"
       ],
       "metadata": {
-        "id": "43zlIHLMAUaz",
-        "outputId": "e85c2adf-d476-4ee3-b281-453a5b849d07",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "43zlIHLMAUaz",
+        "outputId": "e85c2adf-d476-4ee3-b281-453a5b849d07"
       },
       "execution_count": 41,
       "outputs": [
@@ -112,25 +112,57 @@
     {
       "cell_type": "code",
       "source": [
-        "# int\n",
+        "# コード表示\n",
         "%%writefile temp.cpp\n",
         "# include <bits/stdc++.h>\n",
         "using namespace std;\n",
         "int main(){\n",
         "    char str1[] = \"あ\";\n",
         "    for (int i=0; i < sizeof(str1); i++){\n",
+        "      cout << \"0x\" << hex << (str1[i] & 0xff) << endl;\n",
+        "    }\n",
+        "}"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rFcrKJGjC_qP",
+        "outputId": "034b03cf-5df7-45af-9308-54c7d9827279"
+      },
+      "execution_count": 87,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# コード表示を string で出来ないか #=> 出来る\n",
+        "%%writefile temp.cpp\n",
+        "# include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        "int main(){\n",
+        "    string str1 = \"aあ\";\n",
+        "    for (int i=0; i < str1.size(); i++){\n",
         "      cout << hex << (str1[i] & 0xff) << endl;\n",
         "    }\n",
         "}"
       ],
       "metadata": {
-        "id": "rFcrKJGjC_qP",
-        "outputId": "6be45aad-37a9-4246-8c36-d2dd0020b88f",
+        "id": "1syh6879P4k8",
+        "outputId": "9c830e3c-a8cb-4755-a923-acdb8e72fff3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 85,
+      "execution_count": 128,
       "outputs": [
         {
           "output_type": "stream",
@@ -147,22 +179,78 @@
         "!g++ temp.cpp; ./a.out"
       ],
       "metadata": {
-        "id": "pOKZlHxLDM6a",
-        "outputId": "77d90deb-15e4-4734-db37-89fa80482fde",
+        "id": "pOKZlHxLDM6a"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# qiita c++で、UTF-8のbyte数を判定することでマルチバイトの文字列をカウントする\n",
+        "%%writefile temp.cpp\n",
+        "# include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        "int count_byte(char c){\n",
+        "    if ((c & 0x80) == 0) {\n",
+        "        return 1;\n",
+        "    }\n",
+        "    if ((c & 0xe0) == 0xc0) {\n",
+        "        return 2;\n",
+        "    }\n",
+        "    if ((c & 0xf0) == 0xe0){\n",
+        "        return 3;\n",
+        "    }\n",
+        "    return 4;\n",
+        "}\n"
+      ],
+      "metadata": {
+        "id": "tjpdiI8uT-Ld",
+        "outputId": "01f31336-15b4-4c3b-ce73-b87f303068d3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 86,
+      "execution_count": 137,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp; ./a.out"
+      ],
+      "metadata": {
+        "id": "BF_XcYd-Q2c9",
+        "outputId": "b1ec7573-2f7d-4438-9520-36b0d4176abb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 138,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[01m\u001b[Ktemp.cpp:\u001b[m\u001b[K In function ‘\u001b[01m\u001b[Kint main()\u001b[m\u001b[K’:\n",
+            "\u001b[01m\u001b[Ktemp.cpp:28:25:\u001b[m\u001b[K \u001b[01;31m\u001b[Kerror: \u001b[m\u001b[Kinvalid conversion from ‘\u001b[01m\u001b[Kunsigned char*\u001b[m\u001b[K’ to ‘\u001b[01m\u001b[Kchar*\u001b[m\u001b[K’ [\u001b[01;31m\u001b[K-fpermissive\u001b[m\u001b[K]\n",
+            " cout << count_char(strs2\u001b[01;31m\u001b[K)\u001b[m\u001b[K << endl;\n",
+            "                         \u001b[01;31m\u001b[K^\u001b[m\u001b[K\n",
+            "\u001b[01m\u001b[Ktemp.cpp:15:5:\u001b[m\u001b[K \u001b[01;36m\u001b[Knote: \u001b[m\u001b[K  initializing argument 1 of ‘\u001b[01m\u001b[Kint count_char(char*)\u001b[m\u001b[K’\n",
+            " int \u001b[01;36m\u001b[Kcount_char\u001b[m\u001b[K(char* strings){\n",
+            "     \u001b[01;36m\u001b[K^~~~~~~~~~\u001b[m\u001b[K\n",
+            "61\n",
             "e3\n",
             "81\n",
-            "82\n",
-            "0\n"
+            "82\n"
           ]
         }
       ]
